// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders HeaderBack 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "height": 24,
      "justifyContent": "center",
      "margin": 3,
      "width": 24,
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "fontFamily": "Helvetica",
        },
        Object {
          "color": "rgba(0, 0, 0, 0.8)",
          "fontSize": 20,
          "fontWeight": "normal",
          "opacity": 1,
          "textDecorationLine": "none",
        },
        Object {
          "color": "red",
          "fontFamily": "icomoon",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
      ]
    }
  >
    kebeticon-chevron-left
  </Text>
</View>
`;

exports[`renders HeaderClose 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "height": 24,
      "justifyContent": "center",
      "margin": 3,
      "width": 24,
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "fontFamily": "Helvetica",
        },
        Object {
          "color": "rgba(0, 0, 0, 0.8)",
          "fontSize": 40,
          "fontWeight": "normal",
          "opacity": 1,
          "textDecorationLine": "none",
        },
        Object {
          "color": "red",
          "fontFamily": "Ionicons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
      ]
    }
  >
    ionicon-ios-close
  </Text>
</View>
`;
